<resources>
    <string name="app_name">DCE iSEE</string>
    <string name="start_survey">Start Survey</string>
    <string name="survey_title_label">Choose instrument</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="finish_button">Finish</string>
    <string name="skip_button">Skip</string>
    <string name="other_specify">Other</string>
    <string name="other_specify_edit_text">Specify other</string>
    <string name="free_response_edit_text">Answer here</string>
    <string name="refresh">Refresh</string>
    <string name="app_device_identifier">Device Identifier</string>
    <string name="save_button">Save</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="settings">Settings</string>
    <string name="api_endpoint">Api Domain Name</string>
    <string name="app_api_key">Api Key</string>
    <string name="api_version">Api Version</string>
    <string name="app_project_id">Project Id</string>
    <string name="last_update">Last Update:  </string>
    <string name="sync_notification_text">Syncing with server…</string>
    <string name="sync_notification_complete_text">Syncing with server complete.</string>
    <string name="network_unavailable">No network available on the device.</string>
    <string name="api_unavailable">Remote api is not responsive.</string>
    <string name="unacceptable_version_code">You must upgrade your application before continuing.</string>
    <string name="ongoing_surveys">ongoing surveys</string>
    <string name="rosters">rosters</string>
    <string name="questions">questions</string>
    <string name="question">question</string>
    <string name="encryption_required_title">Encryption required</string>
    <string name="encryption_required_text">This application requires that the device be encrypted.  Please encrypt your device to continue.</string>
    <string name="okay">OK</string>
    <string name="password_title">Enter password</string>
    <string name="password_message">This action requires a password.  Please enter the password below.</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_password">This password is incorrect.</string>
    <string name="custom_locale">ISO–639–1 Code</string>
    <string name="not_valid_response">This is not a valid response for this question.</string>
    <string name="of">of</string>
    <string name="instrument_loading_progress_header">Loading</string>
    <string name="background_process_progress_message">Please wait one moment.</string>
    <string name="instrument_not_loaded">There was an issue loading this instrument.  Please re-sync the device and try again.</string>
    <string name="and">and</string>
    <string name="comma">,</string>
    <string name="space">" "</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="instruments">Instruments</string>
    <string name="show_surveys">Show Surveys</string>
    <string name="version_code">Version Code: </string>
    <string name="unidentified_survey">Unidentified Survey </string>
    <string name="unidentified_roster">Unidentified Roster </string>
    <string name="system_information">App Information</string>
    <string name="feature_toggle">Feature Toggle</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="api_endpoint_settings">API Endpoint Settings</string>
    <string name="device_settings">Device Settings</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="take">Take</string>
    <string name="show_skip">Show Skip</string>
    <string name="show_na">Show NA</string>
    <string name="show_dk">Show DK</string>
    <string name="show_rf">Show RF</string>
    <string name="sk">Skip this question</string>
    <string name="rf">Refuse to answer this question</string>
    <string name="dk">Don\'t know</string>
    <string name="na">Not applicable</string>
    <string name="desc" />
    <string name="device_label">Device Label</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_apk_title">Newer version available</string>
    <string name="new_apk_message">Would you like to update the application to the newer version?</string>
    <string name="require_password">Require Password To Enter Survey</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="rule_failure_survey_timing">You cannot take a survey for this instrument at this time.</string>
    <string name="rule_failure_instrument_survey_limit">You cannot take a survey for this instrument.  You have taken the maximum number of surveys allowed.</string>
    <string name="rule_instrument_survey_limit_per_minute">You cannot take a survey for this instrument. You have taken the maximum number of surveys allowed for this time interval.</string>
    <string name="rule_failure_instrument_launch">You cannot launch a survey for this instrument from this app.  Please create a survey from the appropriate application.</string>
    <string name="version">version</string>
    <string name="record_survey_location">Record Survey Location</string>
    <string name="event_log_sent_survey">Sent %1$s for %2$s.</string>
    <string name="delete">Delete</string>
    <string name="delete_survey_title">Delete Selected Survey</string>
    <string name="delete_survey_message">You will not be able to recover the survey and its responses once it is deleted!</string>
    <string name="skipped_questions">Unanswered Questions</string>
    <string name="proceed">Continue</string>
    <string name="section_number_of_questions">Number of questions in this section</string>
    <string name="continue_to_section"> - Press Continue to start section</string>
    <string name="auto_fill_section"> - Select a response below and press Continue to auto fill section with that response</string>
    <string name="section_navigation"> - To go to another section without auto filling, press Cancel and use the navigation panel in the top left</string>
    <string name="SKIP">SKIP</string>
    <string name="NA">NA</string>
    <string name="DK">DK</string>
    <string name="RF">RF</string>
    <string name="review_section_title">Review Unanswered Questions</string>
    <string name="delete_application_data">Delete Instruments and Surveys</string>
    <string name="wiping_data_header">Wiping Data</string>
    <string name="reset">Reset</string>
    <string name="reset_header">Reset Last Sync Time</string>
    <string name="critical_message_title">Critical Responses In Survey</string>
    <string name="submit">Submit All</string>
    <string name="review">Review</string>
    <string name="data_settings">Data Settings</string>
    <string name="delete_confirmation">Are you sure? All un-synced surveys will be lost</string>
    <string name="reset_confirmation">Are you sure? Next refresh will re-download all instruments</string>
    <string name="new_participant">New Participant</string>
    <string name="edit">Edit</string>
    <string name="participant_id_response">dummy</string>
    <string name="survey_identifier">Survey identifier</string>
    <string name="instrument_title">Instrument title</string>
    <string name="roster_title">Roster title</string>
    <string name="roster">roster</string>
    <string name="survey">survey</string>
    <string name="show_rosters">Show Rosters</string>
    <string name="roster_sync_settings">Roster Sync Settings</string>
    <string name="custom_code_hint">Enter custom ISO code for language name</string>
    <string name="roster_api_endpoint">Sync Roster Data To Different Endpoint</string>
    <string name="url_hint">https://example.com/</string>
    <string name="completed">completed</string>
    <string name="sent">Sent</string>
    <string name="un_submit">Unsubmit</string>
    <string name="last_instrument">last instrument</string>
    <string name="last_survey">last survey</string>
    <string name="last_display">last display</string>
    <string name="last_question">last question</string>
    <string name="crashlytics_device_label">device label</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="up_to_date">Your application is up to date</string>
    <string name="re_check_for_updates">Recheck for updates after granting storage permission</string>
    <string name="reset_last_sync_time">Reset Last Sync Time</string>
    <string name="last_sync_time">Last Sync Time: </string>
    <string name="version_name">Version Name: </string>
    <string name="question_text_header">Question Text</string>
    <string name="scores">scores</string>
    <string name="score_type">Score Type:</string>
    <string name="unit_questions">Question Identifiers:</string>
    <string name="minimum_score">Minimum Score:</string>
    <string name="maximum_score">Maximum Score:</string>
    <string name="score_weight">Score Weight:</string>
    <string name="unit_raw_score">Raw Score:</string>
    <string name="weighted_score">Weighted Score:</string>
    <string name="total_raw_score">Total Raw Score:</string>
    <string name="total_weighted_score">Total Weighted Score:</string>
    <string name="show_scores">Show Scores</string>
    <string name="required_field">Field should not be empty!</string>
    <string name="screen">screen</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="update_location">Update Location</string>
    <string name="special_response">Special Response</string>
    <string name="select_special_response">Select Special Response</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="device_user_login">Login Using Device User Credentials</string>
    <string name="capitalized_version">Version</string>
    <string name="url">URL</string>
    <string name="upper_case_OK">OK</string>
    <string name="invalid_user_credentials">Invalid user credentials</string>
    <string name="configure_api_endpoint">Configure API Endpoint</string>
    <string name="api_endpoint_instructions">Manually fill in the details in the API Endpoint Settings section or use the button below to fetch them.</string>
    <string name="download_api_endpoint_settings">Download API Endpoint Settings</string>
    <string name="device_language">Device Language</string>
    <string name="language">Language</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="submit_survey_message">Once you press the SUBMIT button, you will no longer be able to edit the survey(s).</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="sum_of_parts">Total Sum of Parts</string>
    <string name="clear">Clear</string>
    <string name="signature_saved">Signature saved</string>
    <string name="signature_not_saved">Signature NOT saved</string>
    <string name="selected_date">Selected Date</string>
    <string name="response_rank_title">Drag the responses below up/down to rank them from the most relevant to the least relevant</string>
    <string name="drag_left">Drag left</string>
    <string name="respond">Respond</string>
    <string name="response_prompt">Please provide a response for:</string>
    <string name="progress">Progress</string>
    <string name="submitted">Submitted</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
</resources>