<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/number_of_questions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/continue_to_section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_to_section"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/auto_fill_section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_fill_section"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/section_navigation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_navigation"
        android:textStyle="italic"/>

    <RadioGroup
        android:id="@+id/default_responses_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/section_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/section_proceed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/proceed"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>