<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginTop="30dp"
    android:orientation="horizontal"
    android:weightSum="4">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:lines="2"
        android:text="@string/start_recording"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/bg_gray"
        app:drawableTopCompat="@drawable/ic_baseline_mic_24" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:lines="2"
        android:text="@string/stop_recording"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/bg_gray"
        app:drawableTopCompat="@drawable/ic_baseline_mic_off_24" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:lines="2"
        android:text="@string/play_recording"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/bg_gray"
        app:drawableTopCompat="@drawable/ic_baseline_play_arrow_24" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:lines="2"
        android:padding="5dp"
        android:text="@string/stop_playing"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/bg_gray"
        app:drawableTopCompat="@drawable/ic_baseline_pause_24" />

</LinearLayout>
